# nas_chunk

./: README.md  pyproject.toml  rag.py  requirements.txt
nas_chunk/: __init__.py  gemini_client.py  orchestrator.py  rag.py  splitter.py
tests/: test_gemini_client.py  test_public_api.py
